removed all styles

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
   <header>
     <h1 id = "main">extérieurs</h1>
-    <h4 style = "color:white">искусство жить в гармонии с природой</h4>
-    <h2 style = "color:white">design © Россия</h2>
+    <h4>искусство жить в гармонии с природой</h4>
+    <h2>design © Россия</h2>
   </header>
   <aside>
-    <h2 style = "color:grey">СИТИ ЗЭН</h2>
+    <h2 class = "grey">СИТИ ЗЭН</h2>
   </aside>
   <section>
-    <h2 style = "color:green">радость радуги</h2>
+    <h2 class = "green">радость радуги</h2>
     <p>садовая мебель всех цветов</p>
     <h3>сад для гурмана</h3>
     <p>новые принципы трапезы на свежем воздухе</p>
@@ -24,7 +24,7 @@
     <h3>бассей-party</h3>
     <p>20 эффектных способов правилно освежиться</p>
     <h2>светильники:</h2>
-    <h3 style = "color:yellow">вторая жизнь сада ночью</h3>
+    <h3 class ="yellow">вторая жизнь сада ночью</h3>
     <h2>лоджии и балконы</h2>
     <p>Джуманджи! Зеленая резервация у вас дома как способ победить каменные джунгли</p>
     <h2>прозрачное волшебство</h2>
@@ -43,8 +43,8 @@
     <p>ISSN 2079-3014</p>
     <img src="barcode.png" alt="barcode">
     <p>1002</p>
-    <h3 style = "color:red" >art com</h3>
-    <h4 style = "color:blue">media group</h4>
+    <h3 class = "red" >art com</h3>
+    <h4 class = "blue">media group</h4>
   </aside>
 </body>
   </html>
